--- a/SnortAngular/src/app/app.component.html
+++ b/SnortAngular/src/app/app.component.html
@@ -22,12 +22,10 @@
       <li class="nav-item" routerLinkActive="active">
 
         <div class="btn-group" dropdown>
-          <button id="single-button" type="button" class="btn btn-info" dropdownToggle>
-            <span class="fa fa-cloud-upload"></span>
-            Import Rules
-            <span class="caret"></span>
+          <button id="single-button" type="button" class="btn btn-info dropdown-toggle" dropdownToggle>
+            <span class="fa fa-cloud-upload"></span> Import Rules<span class="caret"></span>
           </button>
-          <ul dropdownMenu role="menu" aria-labelledby="single-button">
+          <ul *dropdownMenu role="menu" class="dropdown-menu" aria-labelledby="single-button">
             <li role="menuitem"><a class="dropdown-item" href="#">Import from .csv</a></li>
             <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
             <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
