--- a/SnortAngular/src/app/history/history.component.html
+++ b/SnortAngular/src/app/history/history.component.html
@@ -1,14 +1,13 @@
 <div class="container-fluid">
   <h1>History of uploaded .csv rule files </h1>
-
   <div *ngFor="let rulesPackage of historyRules" class="card card-outline rules-card">
-    <div class="card-header">{{ rulesPackage.FileName }}</div>
+    <div class="card-header">{{ rulesPackage.fileName }}</div>
     <div class="card-block">
-      <h4 class="card-title">{{rulesPackage.FileName}}</h4>
-      <p class="card-text">Description : {{rulesPackage.Description}}</p>
-      <p class="card-text">Uploaded on : {{rulesPackage.CreationDate}}</p>
-      <button class="btn btn-success" (click)='[goToRulesDetails(rulesPackage.Id)]'>Open Rules</button>
-      <button class="btn btn-danger" (click)='[deleteItem(rulesPackage.Id)]'>Delete file from History</button>
+      <h4 class="card-title">{{ rulesPackage.fileName }}</h4>
+      <p class="card-text">Description : {{ rulesPackage.description }}</p>
+      <p class="card-text">Uploaded on : {{ rulesPackage.creationDate }}</p>
+      <button class="btn btn-success" (click)='[goToRulesDetails(rulesPackage.collection_id)]'>Open Rules</button>
+      <button class="btn btn-danger" (click)='[deleteItem(rulesPackage.collection_id)]'>Delete file from History</button>
     </div>
   </div>
 </div>
