Added Insert,Update,Delete for the rules in Rules View

--- a/SnortAngular/src/app/rules/rules.component.css
+++ b/SnortAngular/src/app/rules/rules.component.css
@@ -5,3 +5,14 @@ h1{
     margin-top:20px;
     margin-bottom:50px;
 }
+input{
+    width:100%;
+}
+textarea, select{
+    width:100%;
+}
+
+#addRule{
+    float:right;
+    margin:10px;
+}
