--- a/SnortAngular/src/app/history/history.component.html
+++ b/SnortAngular/src/app/history/history.component.html
@@ -7,7 +7,10 @@
       <p class="card-text">Description : {{ rulesPackage.description }}</p>
       <p class="card-text">Uploaded on : {{ rulesPackage.creationDate }}</p>
       <button class="btn btn-success" (click)='[goToRulesDetails(rulesPackage.collection_id)]'>Open Rules</button>
-      <button class="btn btn-danger" (click)='[deleteItem(rulesPackage.collection_id)]'>Delete file from History</button>
+      <button class="btn btn-danger" (click)='modal.showChildModal(rulesPackage.collection_id)'>Delete file from History</button>
     </div>
   </div>
 </div>
+
+<!--Just the modal dialog-->
+<modal-dialog #modal [parent]='this'></modal-dialog>
