--- a/SnortAngular/src/app/app.component.html
+++ b/SnortAngular/src/app/app.component.html
@@ -8,29 +8,26 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/home">
-          <span class="fa fa-home"></span>
-           Home
+          <span class="fa fa-home"></span> Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/history">
-        <span class="fa fa-clock-o"></span>
-        History
+          <span class="fa fa-clock-o"></span> History
         </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-
         <div class="btn-group" dropdown>
           <button id="single-button" type="button" class="btn btn-info dropdown-toggle" dropdownToggle>
             <span class="fa fa-cloud-upload"></span> Import Rules<span class="caret"></span>
           </button>
           <ul *dropdownMenu role="menu" class="dropdown-menu" aria-labelledby="single-button">
-            <li role="menuitem"><a class="dropdown-item" href="#">Import from .csv</a></li>
-            <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
-            <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/import">Import from .csv</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/import">Another action</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/import">Something else here</a></li>
             <li class="divider dropdown-divider"></li>
-            <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/import">Separated link</a></li>
           </ul>
         </div>
       </li>
