--- a/SnortAngular/src/app/home/home.component.html
+++ b/SnortAngular/src/app/home/home.component.html
@@ -1,10 +1,20 @@
 <div class="container">
   <div class="jumbotron">
-    <h1>Welcome to Snort Manager</h1>
-    <p class="lead">Snort manager is an application created in order to ease the use of the popular snort security rules.
-       With this application, you will have the opportunity to import custom .csv files in order to generate snort rules out of them.
-       To start , import a snort .csv alert file!</p>
-    <a class="btn btn-lg btn-success" href="../../components/navbar/" role="button">Import &raquo;</a>
-    <a class="btn btn-lg btn-primary" href="/history" role="button">View history &raquo;</a>
+    <h1 class="text-center display-4">Welcome to Snort Manager</h1>
+    <br>
+    <div class="row">
+      <div class="col-md-6">
+        <p class="lead text-justify">Snort manager is an application created in order to ease the use of the popular snort security rules. With this application,
+          you will have the opportunity to import custom .csv files in order to generate snort rules out of them. To start
+          , import a snort .csv alert file!</p>
+        <div class="mx-auto d-block text-center">
+          <a class="btn btn-lg btn-success" routerLink='/import' role="button">Import &raquo;</a>
+          <a class="btn btn-lg btn-primary" routerLink='/history' role="button">View history &raquo;</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid mx-auto d-block" src="/assets/Snorlax.png">
+      </div>
+    </div>
   </div>
 </div>
