Added possibility to process the uploaded rules, inserting them in database and creating rules packs

--- a/SnortAngular/src/app/import-rules/import-rules.component.css
+++ b/SnortAngular/src/app/import-rules/import-rules.component.css
@@ -30,6 +30,6 @@
     margin-right:auto;
 }
 
-.nv-file-over { background-color:#8c8c8c;} /* Default class applied to drop zones on over */
+.nv-file-over { background-color:#a8a8a8;} /* Default class applied to drop zones on over */
 .another-file-over-class { border: dotted 3px green; }
 html, body { height: 100%; }
