--- a/SnortAngular/src/app/app.component.html
+++ b/SnortAngular/src/app/app.component.html
@@ -32,9 +32,9 @@
         </div>
       </li>
     </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <form class="form-inline mt-2 mt-md-0" name="searchForm">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" [(ngModel)]='searchString' name="searchForm">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="goSearch(searchString)">Search</button>
     </form>
   </div>
 </nav>
