--- a/SnortAngular/src/app/rules/rules.component.html
+++ b/SnortAngular/src/app/rules/rules.component.html
@@ -11,7 +11,7 @@
         <span class="fa fa-plus"></span> <b>Insert new rule</b>
       </button>
       <!--Render table-->
-      <table class="table">
+      <table class="table table-hover">
         <thead class="thead-inverse">
           <tr>
             <th> # </th>
@@ -26,7 +26,7 @@
             <th> Actions </th>
           </tr>
         </thead>
-        <tbody class="table table-hover">
+        <tbody class="table">
           <tr *ngFor="let rule of rules; let i = index">
             <ng-container *ngIf="rule.id != selectedRuleId;else editable">
               <th scope="row">{{ i + 1 }}</th>
