Homepage little fix for removing unused dropdown

--- a/SnortAngular/src/app/app.component.html
+++ b/SnortAngular/src/app/app.component.html
@@ -19,16 +19,18 @@
       </li>
       <li class="nav-item" routerLinkActive="active">
         <div class="btn-group" dropdown>
-          <button id="single-button" type="button" class="btn btn-info dropdown-toggle" dropdownToggle>
-            <span class="fa fa-cloud-upload"></span> Import Rules<span class="caret"></span>
+          <!--<button id="single-button" type="button" class="btn btn-info dropdown-toggle" dropdownToggle>-->
+          <button id="single-button" type="button" class="btn btn-info ">
+            <span class="fa fa-cloud-upload"></span> Import Rules
+            <!--<span class="caret"></span>-->
           </button>
-          <ul *dropdownMenu role="menu" class="dropdown-menu" aria-labelledby="single-button">
+          <!--<ul *dropdownMenu role="menu" class="dropdown-menu" aria-labelledby="single-button">
             <li role="menuitem"><a class="dropdown-item" routerLink="/import">Import from .csv</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/import">Another action</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/import">Something else here</a></li>
             <li class="divider dropdown-divider"></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/import">Separated link</a></li>
-          </ul>
+          </ul>-->
         </div>
       </li>
     </ul>
