--- a/SnortAngular/src/app/rules/rules.component.html
+++ b/SnortAngular/src/app/rules/rules.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="rulesCollection" class="container-fluid">
-  <button class="btn btn-primary btn-xs" (click)="goBack()"><span class="fa fa-arrow-left"></span> Back</button>
+  <button class="btn btn-info btn-xs" (click)="goBack()"><span class="fa fa-arrow-left"></span> Back</button>
   <h1>Rules from file : {{ rulesCollection.fileName }} </h1>
   <div class="card card-outline">
     <div class="card-header">Defined Rules :</div>
@@ -9,6 +9,12 @@
       <!--Add new rule button-->
       <button class="btn btn-success" id="addRule" (click)="insertRule()">
         <span class="fa fa-plus"></span> <b>Insert new rule</b>
+      </button>
+      <button class="btn btn-info" id="addRule" (click)="ImportInSnort()">
+        <span class="fa fa-upload"></span> <b>Import .rules into Snort</b>
+      </button>
+      <button class="btn btn-warning" id="addRule" (click)="ExportRulesCSV()">
+        <span class="fa fa-save"></span> <b>Export .rules file</b>
       </button>
       <!--Render table-->
       <table class="table table-hover">
@@ -40,7 +46,7 @@
               <td>{{ rule.content}}</td>
               <td>
                 <div class="btn-group btn-group-justified inline mx-auto">
-                  <button class="btn btn-primary btn-xs" alt="Edit" (click)='[selectRuleForEdit(rule.id)]'><span class="fa fa-pencil"></span></button>
+                  <button class="btn btn-info btn-xs" alt="Edit" (click)='[selectRuleForEdit(rule.id)]'><span class="fa fa-pencil"></span></button>
                   <button class="btn btn-danger btn-xs" alt="Delete" (click)='modal.showChildModal(rule.id)'><span class="fa fa-trash"></span></button>
                 </div>
               </td>
@@ -54,6 +60,11 @@
                   <option [ngValue]='0'>{{ typeToString(0) }}</option>
                   <option [ngValue]='1'>{{ typeToString(1) }}</option>
                   <option [ngValue]='2'>{{ typeToString(2) }}</option>
+                  <option [ngValue]='3'>{{ typeToString(3) }}</option>
+                  <option [ngValue]='4'>{{ typeToString(4) }}</option>
+                  <option [ngValue]='5'>{{ typeToString(5) }}</option>
+                  <option [ngValue]='6'>{{ typeToString(6) }}</option>
+                  <option [ngValue]='7'>{{ typeToString(7) }}</option>
                 </select>
               </td>
               <!--Protocol-->
@@ -61,6 +72,8 @@
                 <select class="form-control" id="selectProtocol" [(ngModel)]='rule.protocol'>
                   <option [ngValue]='0'>{{ protocolToString(0) }}</option>
                   <option [ngValue]='1'>{{ protocolToString(1) }}</option>
+                  <option [ngValue]='2'>{{ protocolToString(2) }}</option>
+                  <option [ngValue]='3'>{{ protocolToString(3) }}</option>
                 </select>
               </td>
               <td><input class="form-control" [(ngModel)]='rule.sourceIP'></td>
@@ -77,7 +90,7 @@
               <td><textarea class="form-control" [(ngModel)]='rule.content'></textarea></td>
               <td>
                 <div class="btn-group btn-group-justified inline mx-auto">
-                  <button class="btn btn-primary btn-xs" alt="Save" (click)='[saveRule()]'><span class="fa fa-floppy-o"></span></button>
+                  <button class="btn btn-info btn-xs" alt="Save" (click)='[saveRule()]'><span class="fa fa-floppy-o"></span></button>
                   <button class="btn btn-danger btn-xs" alt="Delete" (click)='modal.showChildModal(rule.id)'><span class="fa fa-trash"></span></button>
                 </div>
               </td>
