Added sid to exported rules , modified a lot of strings thorugh the application , fixed a bug in Search and modified the template of the exported rules.

--- a/SnortAngular/src/app/history/history.component.html
+++ b/SnortAngular/src/app/history/history.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>History of uploaded .csv rule files </h1>
+  <h1>History of uploaded .csv IOC files </h1>
   <div *ngFor="let rulesPackage of historyRules" class="card card-outline rules-card">
     <div class="card-header">{{ rulesPackage.fileName }}</div>
     <div class="card-block">
