--- a/SnortAngular/src/app/import-rules/import-rules.component.html
+++ b/SnortAngular/src/app/import-rules/import-rules.component.html
@@ -2,7 +2,7 @@
   <div class="card upload-card">
     <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)" [uploader]="uploader"
       class="card card-block bg-faded my-drop-zone">
-      <span><h3>Drag & Drop your rules file over here...</h3></span>
+      <span><h3>Drag & Drop your IOC file(s) over here...</h3></span>
     </div>
     <div class="card-block">
       <h3 class="card-title">Import files</h3>
