--- a/SnortAngular/src/app/app.component.html
+++ b/SnortAngular/src/app/app.component.html
@@ -21,7 +21,7 @@
         <div class="btn-group" dropdown>
           <!--<button id="single-button" type="button" class="btn btn-info dropdown-toggle" dropdownToggle>-->
           <button id="single-button" type="button" class="btn btn-info " routerLink="/import">
-            <span class="fa fa-cloud-upload"></span> Import Rules
+            <span class="fa fa-cloud-upload"></span> Import IOC File
             <!--<span class="caret"></span>-->
           </button>
           <!--<ul *dropdownMenu role="menu" class="dropdown-menu" aria-labelledby="single-button">
